[package]
name = "four-player-chess-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1.9"
four-player-chess = { git="https://github.com/Four-player-chess-inc/four-player-chess-rs", rev="51c856d" }
futures = "0.3.21"

[dev-dependencies]
